# CCSD_DOC_OI_Formatter

./: .gitignore  README.md  pyproject.toml
docs/: rules.md
src/usaf_oi_formatter/: __init__.py  __main__.py  acronyms.py  attachments.py  batch.py  bullets.py  cli.py  convert.py  formatter.py  gui.py  headerblock.py  hygiene.py  lint.py  meta.py  numbering.py  pagesetup.py  profile.py  report.py  rules.py  styles.py  template.py  templates.py
src/vba/: ThisDocument.cls  frmMain.frm  frmReport.frm  modAcronyms.bas  modAttachments.bas  modBatch.bas  modBulletsLists.bas  modCLI.bas  modFormatter.bas  modHeaderBlock.bas  modNumbering.bas  modPageSetup.bas  modReport.bas  modRules.bas  modStyles.bas
tests/: test_formatter.py  test_lint.py  test_profile.py  test_rules.py
tests/samples/: README.md
tools/: Format-USAFOI.ps1  Install-Addin.ps1  build-exe.ps1
wheels/: README.md  lxml-6.1.0-cp312-cp312-win_amd64.whl
